make changes in chps 2 thru 8

--- a/03-energy.tex
+++ b/03-energy.tex
@@ -175,7 +175,7 @@ in $J/cal$ or $kJ/kcal$ by computing the percent error, given by
 
 \item Compare the percent difference between the two runs. Be sure to convert the thernal energy in cal to thermal energy in Joules.
 \[ \frac{|E - Q|}{\frac{1}{2}(E+Q)} \times 100\%. \]
-
+\todo{State explicitly the formula for percentage difference}
 \end{enumerate}
 
 %Find the percent difference between the two calculations and discuss whether they agree within estimated experimental uncertainties.
@@ -183,7 +183,7 @@ in $J/cal$ or $kJ/kcal$ by computing the percent error, given by
 %---------------------------------------------------------------------
 \section{Questions}
 \begin{enumerate}
-	\item Estimate the experimental or instrumental uncertainties \marginnote{\[ \frac{\delta V}{V}, \frac{\delta I}{I}, \frac{\delta T}{T}, \frac{\delta m}{m}. \] The $\delta$'s are uncertainties not changes or differences. Most often, they are least counts in the instruments.}
+	\item Estimate the experimental or instrumental uncertainties \marginnote{\[ \frac{\delta V}{V}, \frac{\delta I}{I}, \frac{\delta T}{T}, \frac{\delta m}{m}. \] The $\delta$'s are uncertainties not changes or differences. Very often, they are least counts in the instruments.}
 in reading the voltmeter, ammeter, thermometer, and the balance scale.  Refer to the appendix in this manual for methods of accomplishing this. 
 	\item For a constant current, $I$, how is the joule heat related to the resistance of the heating coil?
 	\item Which method (calorimetry or electric) do you believe is inherently more precise?  Why is this so?  Can you justify this using the uncertainty calculations from question 1?
