--- a/04-dc1.tex
+++ b/04-dc1.tex
@@ -121,7 +121,8 @@ These activities center on measuring resistance using three different methods. (
 %	\item Once you have measured the voltage and current for each resistor separately, calculate the equivalent series resistance $R_S$ using \rref{e:ohm}.
 	\item Measure the voltage separately across each resistor in the series circuit. The current through each resistor is the same. Then calculate the equivalent series resistance $R_S$ using \rref{e:ohm}. (Also verify whether the sum of the voltages across each resistor equals the total voltage supplied to the circuit.)
 	\item Determine the experimental uncertainty in the value of $R_S$. %found in item \ref{l:eqs}.
-	\[ \delta R \sim R_S\left( \frac{\delta V}{V} + \frac{\delta I}{I} \right). \] The $\delta$'s are uncertainties in the measured values, not changes or differences.
+	\[ \delta R \sim R_S\left( \frac{\delta V}{V} + \frac{\delta I}{I} \right). \] 
+	The $\delta$'s are uncertainties \todo{Uncertainty via fractional uncertainties. Is this too much?} in the measured values, not changes or differences.
 	
 	\item Calculate the equivalent resistance $R_S$ using (\rref{e:ser}) where the individual resistances are those found by the Ohm's law method. %in item \ref{l:olm}.
 \end{enumerate}
