--- a/05-dc2.tex
+++ b/05-dc2.tex
@@ -45,7 +45,7 @@ In this lab, you will explore the internal resistance of a battery.  In the firs
 \end{equation}
 	\item Replace the precision resistor with one having a different resistance (be sure to measure its actual resistance with an ohmmeter) and repeat the measurements of current and terminal voltage.
 	\item Calculate the internal resistance $r$ of the battery for each measurement using the previously measured emf of the battery. \[ r = \frac{E - V_T}{I} \]  Verify that the internal resistance actually varies with load, i.e. the value of the resistor in the circuit.
-	\item Plot the measured voltage value vs. current for each resistor, including the \emph{emf} voltage when there is no current. The slope of the line gives a reasonable value for the internal resistance of the battery.
+	\item Plot \todo{Plot V vs. I to determine internal resistance of the battery. Extends the task of measurement of V and I for each resistor.}the measured voltage value vs. current for each resistor, including the \emph{emf} voltage when there is no current. The slope of the line gives a reasonable value for the internal resistance of the battery.
 	\item Discuss these results and your observations regarding the internal resistance of your battery in your lab report.
 \end{enumerate}
 
@@ -87,7 +87,7 @@ In this lab, you will explore the internal resistance of a battery.  In the firs
 	\item Using the block diagram of \fref{f:circboard} as a guide, measure the currents $I_1$, $I_2$, and $I_3$, --- remove the appropriate wire, insert the ammeter, then measure the current.
 	\item Apply Kirchhoff's junction rule to junction $A$ and Kirchhoff's loop rule to the top and bottom loop.  Enter the values of the currents, resistances, and voltages for this circuit into each equation.  Are the rules verified by your values? Discuss your results.
 
-	\item Solve \sidenote{One set of solutions is included at the end.} the three equations obtained from the application of Kirchhoff's rules for the currents $I_1$, $I_2$, and $I_3$, treating them as unknowns. (Your instructor can provide some guidance in how to solve three equations for three unknowns.)
+	\item Solve \sidenote{One set of solutions is included at the end.} the three equations obtained from the application of Kirchhoff's rules for the currents $I_1$, $I_2$, and $I_3$, treating them as unknowns. (Your instructor can provide some guidance in how to solve three equations for three unknowns.)\todo{Perhaps this task for the lab should be removed?}
 
 	\item Now calculate the currents using the known values of the resistances and voltages.  Compare the calculated values of the currents to the measured values and discuss how well they agree. 
 \end{enumerate}
@@ -119,6 +119,7 @@ One set of solutions to the circuit follows.
 
 \[ I_3 = \frac{E_2(R_1 +R_2) - E_12_2}{R_1R_2 + R_1R_3 + R_2R_3}  \]
 
+\todo{Equations for student reference.}
 Compare these results with your measured values.
 
 %--begin comment---------------------------------------------------------
