--- a/06-induction.tex
+++ b/06-induction.tex
@@ -1,6 +1,6 @@
 % !TEX root = 5b-main.tex
 \chapter{Magnetic Fields \& \newline Electromagnetic Induction}
-
+%-------------------------------
 \section{Purpose}
 In this lab, we will explore the phenomenon of magnetism and electromagnetic induction.  As you might assume by the name, this refers to \textit{inducing} current flow by the presence of a magnetic field.  Electromagnetic induction is used by virtually every piece of electronic equipment with which you interact, from your cell phone to your computer to your microwave oven.  
 
@@ -12,8 +12,11 @@ In this lab, we will explore the phenomenon of magnetism and electromagnetic ind
 	\forcerectofloat
 \end{figure}
 
+%-------------------------------
 \section{Preparation}
-This lab will cover a very useful and potentially interesting application of magnetic fields.  To prepare, you should be familiar with the concepts of a magnetic field and magnetic force that are introduced in Chapter 20.  Pay particular attention to Sections 20.2, 20.9 and 20.10.  Additionally, we will be applying specific concepts of magnetic fields.  These concepts are covered in 21.1, 21.3 and 21.4.  Practicing Examples 21.3 and 21.6 will ensure that you are prepared for this lab.
+%This lab will cover a very useful and potentially interesting application of magnetic fields.  To prepare, you should be familiar with the concepts of a magnetic field and magnetic force that are introduced in Chapter 20.  Pay particular attention to Sections 20.2, 20.9 and 20.10.  Additionally, we will be applying specific concepts of magnetic fields.  These concepts are covered in 21.1, 21.3 and 21.4.  Practicing Examples 21.3 and 21.6 will ensure that you are prepared for this lab.
+
+This lab will cover a very useful and potentially interesting application of magnetic fields.  To prepare, you should be familiar with the concepts of a magnetic field, magnetic force, and magnetic induction.
 
 \paragraph{Pre-lab Assignment}
 Suppose the current in the Primary coil is increasing in \fref{f:induction-galvanometer}.  Explain the direction of the current induced in the Secondary coil using Faraday's law, Lenz's law, and the Right Hand Rule.  You may be asked to turn in your explanation at the beginning of class as a short preparatory assignment.
@@ -26,8 +29,7 @@ Suppose the current in the Primary coil is increasing in \fref{f:induction-galva
 	\caption[Electromagnetic Induction][2em]{\textsc{Electromagnetic Induction} allows current inducted in the primary circuit to generate current in the secondary.  The direction of current in the secondary will depend on whether the magnetic field is increasing or decreasing in strength. \newline~ \newline A \textsc{Galvanometer} is a type of ammeter that measures current direction and strength}
 \end{figure*}
 
-
-
+%-------------------------------
 \section{Experimental Set-Up}
 You will use two coils in a series of activities.  These are shown in \fref{f:induction-galvanometer} as one of the configurations you will explore.  The primary coil is the one that you connect to a battery and switch.  The secondary coil is the one you connect to a galvanometer.  Current into the + terminal of the galvanometer will move the arrow to the right while current into the - terminal will move the arrow to the left.  The size of the arrow's movement indicates the amount of current flowing.
 
@@ -39,7 +41,7 @@ You will use two coils in a series of activities.  These are shown in \fref{f:in
 %	\label{f:fig13}
 %\end{figure}
 
-
+%-------------------------------
 \section{Exploring Magnetic Fields and Induction}
 
 \subsection{Activity: Magnetic Field from Current-Carrying Wires}
@@ -65,9 +67,7 @@ You will use two coils in a series of activities.  These are shown in \fref{f:in
 	\item Use an iron rod to link the primary and secondary coils instead of the wood rod.  Starting with the coils separated by 10 cm, open and close the switch to the primary.  Record the relative magnitude of the deflection of the galvanometer then decrease the separation of the coils to 9 cm, then 8 cm, and so on.  Make a graph of the galvanometer deflection versus distance between the coils. 
 \end{enumerate}
 
-
 \subsection{Activity: Induced emf by a Magnet}
-
 
 \begin{marginfigure}
 	\label{fig:mag-inductance}
@@ -82,8 +82,9 @@ You will use two coils in a series of activities.  These are shown in \fref{f:in
 	\item Since you learned last section that energy is conserved, where does the current in the coil come from?  Hint: not the magnet.
 \end{enumerate}
 
+%-------------------------------
 \section{Conclusions}
-If you wanted to continuous current in one of the coils (so that the galvanometer stays on one side or the other), can you think of a way to do that with the magnet and coils from today's experiment?  What types of energy (potential energy, thermal energy, etc) could you use in this manner to generate electricity?
+If you wanted to induce continuous current in one of the coils (so that the galvanometer stays on one side or the other), can you think of a way to do that with the magnet and coils from today's experiment?  What types of energy (potential energy, thermal energy, etc.) could you use in this manner to generate electricity?
  
 % \clearpage
 %\newpage
