--- a/08-reflection.tex
+++ b/08-reflection.tex
@@ -63,7 +63,9 @@ where $n_1$ and $n_2$ are the indices of refraction for the media involved.
 
 % Verify the law of refraction
 	\item Partially fill the pie box with water and a few granules of powdered milk.  Gently stir the water until the milk dissolves.  Trace a ray of light as it enters and leaves the pie box.  
-	\item Taking the index of refraction of water to be 1.33 and that of air to be 1.00, check to see if the law of refraction---\rref{e:snell}---is verified at both the entry and exit points.  
+	\item Taking the index of refraction of water to be 1.33
+	\todo{Ask students to determine $n_g$ going from air into water, then from water into air. Otherwise, students get answers like 0.875 = 0.89 when using the law.} 
+	and that of air to be 1.00, check to see if the law of refraction---\rref{e:snell}---is verified at both the entry and exit points.  
 	\item Discuss your results. Note that they were note affected by passing through the plastic of the container.  Can you think of a reason why this would be the case.  Can you think of an experiment that would allow you to test your hypothesis?
 \end{enumerate}
 	
@@ -71,6 +73,7 @@ where $n_1$ and $n_2$ are the indices of refraction for the media involved.
 \begin{enumerate}
 \item
 	Trace a ray of light through a glass block and measure the incident and exit angles of the ray.  Do this for 3 different angles between 15$^{\circ}$ and 75$^{\circ}$.
+	\todo{Are three angles necessary? Ask students to determine $n_{block}$ with measurements from air to glass, and then glass to air.}
 	\item Assume that the index of refraction for air is 1.00. Use \rref{e:snell} to determine the index of refraction for the glass block.
 	\item Compare the value you obtain with the value in your textbook.  Come up with a hypothesis that can explain the discrepancy.  Can you think of a way to test your hypothesis?
 \end{enumerate}
@@ -79,7 +82,9 @@ where $n_1$ and $n_2$ are the indices of refraction for the media involved.
 \begin{enumerate}
 \item Pass the ray of light through a prism.  Gradually rotate the prism so that the ray leaving the other side comes out at progressively greater angles relative to the perpendicular to the surface.  
 	\item Determine the internal angle at which light no longer emerges.  Remember that the internal angle is different from the incident angle.
-	\item Calculate the critical angle using your measured values for the index of refraction and 
+	\item Calculate the critical angle using your measured values
+	\todo{Ask students to first determine the index by measurement.}
+	for the index of refraction and 
 \begin{equation} \label{e:critang}
 	\theta_c = \sin^{-1} \left(\frac{n_2}{n_1}\right) \text{where} \ n_1 > n_2
 \end{equation}
@@ -90,8 +95,14 @@ where $n_1$ and $n_2$ are the indices of refraction for the media involved.
 We will use the curved metal mirror to verify that the focal length of such a mirror is one half its radius of curvature.
 \begin{enumerate}
 	 \item Measure the radius of curvature $R$ of the mirror by tracing its curve with a large compass.  
-	 \item Then, trace out 4 paths created by parallel incident rays.  Find the point at which they cross after being reflected.  This is the focal point. 
-	 \item Measure the distance of this point from the furthest point on the mirror.  This is the focal length $f$ of the mirror.  
+	 \item Then, trace out 4 paths (two parallel incident rays and their two reflected rays). 
+%	  created by parallel incident rays.
+Find the point at which the reflected rays cross.
+%they cross after being reflected.  
+This is the focal point. 
+	 \item Measure the perpendicular distance of this point 
+%	 from the furthest point on 
+to the mirror.  This is the focal length $f$ of the mirror.  
 	 \item Discuss whether $f$ is half the radius of curvature $R$, as is predicted by the law of reflection.
 \end{enumerate}
 	
