--- a/02-efield.tex
+++ b/02-efield.tex
@@ -68,7 +68,8 @@ Re-arrange the parallel plates into a different, non-parallel configuration or o
 \section{Questions}
 \begin{enumerate}
 	 \item Explain three aspects of these measurements that contribute to experimental uncertainties.
-	 \item Include an estimate of how much uncertainty \marginnote{$\delta V, \delta s$. The $\delta$'s are uncertainties, not differences.} there is in the measurements of voltage and position and whether these resulted in a departure of your experimental results from expected outcomes. 
+	 \item Include an estimate of how much uncertainty \marginnote{$\delta V, \delta s$. The $\delta$'s are uncertainties, not differences.} there is in the measurements of voltage and position and whether these resulted in a departure of your experimental results from expected outcomes. Use the fractional uncertainties, \[ \frac{\delta V}{V}, \frac{\delta I}{I}. \]
+\todo[inline]{Consider fractional uncertainties for the meters}
 \end{enumerate}
 
 %\newpage
