--- a/5b-main.tex
+++ b/5b-main.tex
@@ -30,14 +30,15 @@
 %\end{fullwidth}
 %\maketitle
 \tableofcontents
+\setcounter{tocdepth}{10}
+\listoftodos%[Notes list]
 \listoffigures
 %\listoftables
 %
 %\part{Laboratory Experiments}
 
-\listoftodos%[Notes list]
 \mainmatter
-% zn: 2014.02.05 make manual independent of textbook?
+% zn: 2014.02.05 make manual independent of textbook
 %\openepigraph{%
 %Textbook references in this manual refer to the Young and Geller ``College Physics'' textbook.  Addenda for the Knight, Jones and Field textbook ``College Physics: A Strategic Approach'' are available from your instructor}{}
 %\setcounter {lab} {1}
@@ -56,13 +57,13 @@
 \input{05-dc2}
 %
 %%\addtocounter {lab}{1}
-%\input{06-induction}
+\input{06-induction}
 %
 %%\addtocounter {lab}{1}
-%\input{07-radiation}
+\input{07-radiation}
 %
 %%\addtocounter {lab}{1}
-%\input{08-reflection}
+\input{08-reflection}
 %
 %%\addtocounter {lab}{1}
 %\input{09-thinlenses}
