added note re least count

--- a/5b-main.tex
+++ b/5b-main.tex
@@ -83,6 +83,7 @@
 %%\addtocounter {lab}{1}
 %\input{14-nuclear.tex}
 %
+%\input{uncertainties}
 %\begin{fullwidth}
 %\part{Appendices}
 %\end{fullwidth}
