--- a/05-dc2.tex
+++ b/05-dc2.tex
@@ -49,7 +49,9 @@ In this lab, you will explore the internal resistance of a battery.  In the firs
 \end{equation}
 	\item Replace the precision resistor with one having a different resistance (be sure to measure its actual resistance with an ohmmeter) and repeat the measurements of current and terminal voltage.
 	\item Calculate the internal resistance $r$ of the battery for each measurement using the previously measured emf of the battery. \[ r = \frac{E - V_T}{I} \]  Verify that the internal resistance actually varies with load, i.e. the value of the resistor in the circuit.
-	\item Plot \todo{Plot V vs. I to determine internal resistance of the battery. Extends the task of measurement of V and I for each resistor.}the measured voltage value vs. current for each resistor, including the \emph{emf} voltage when there is no current. The slope of the line gives a reasonable value for the internal resistance of the battery.
+	\item Plot \todo{Plot V vs. I to determine internal resistance of the battery. Extends the task of measurement of V and I for each resistor.}the measured voltage value vs. current for each resistor, including the \emph{emf} voltage when there is no current. In this case, the equation of the line can be written,
+	\[ V_T  = -Ir + E \]
+	The slope of the line $r$ gives a reasonable value for the internal resistance of the battery.
 	\item Discuss these results and your observations regarding the internal resistance of your battery in your lab report.
 \end{enumerate}
 
